example/lib/availability/x_Resource/Error/impl.ts
import { ErrorForegroundAction, ErrorResource } from "./resource"

import { initNotifyComponent } from "./Notify/impl"

export function initErrorResource(foreground: ErrorForegroundAction): ErrorResource {
    return {
        notify: initNotifyComponent(foreground),
    }
}
